# MINERWA

./: .gitignore
project/pipeline/minerwa/: Dockerfile  INSTALLATION.md  clickhouse_init.sql  config.conf  docker-compose.yaml  flow_definition.yaml  nanodec_requirements.txt  pyproject.toml  scaling_config.yaml  schema.capnp  window_cfg.yaml
project/pipeline/minerwa/grafana/: Dockerfile
project/pipeline/minerwa/grafana/dashboards/: anomaly.json
project/pipeline/minerwa/grafana/provisioning/dashboards/: minerwa.yaml
project/pipeline/minerwa/grafana/provisioning/dashboards/dashboards/: anomaly.json  network.json  overview.json
project/pipeline/minerwa/grafana/provisioning/datasources/: clickhouse.yaml
project/pipeline/minerwa/grafana/provisioning/plugins/: clickhouse.yaml
project/pipeline/minerwa/minerwa/: command.py  config.py  main.py  model.py  plugin.py
project/pipeline/minerwa/minerwa/datasources/: main.py  nats.py  nsq.py  zmq.py
project/pipeline/minerwa/minerwa/detectors/: ai.py  base.py  main.py
project/pipeline/minerwa/minerwa/helpers/: flow_definition.py
project/pipeline/minerwa/minerwa/ingestors/: __init__.py  main.py
project/pipeline/minerwa/minerwa/ingestors/processors/: nprobe.py  vflow.py
project/pipeline/minerwa/minerwa/utils/: clickhouse.py  schema.py
project/pipeline/nanodec/VNET-NAnoDec-GEE/: .gitattributes  .gitignore  Readme.md  environment.yml  (+3 more)
project/train/attack_generation/: .gitignore  README.md  ddos_attack.yaml  execute_attack.yaml  init_attacker.yaml  init_victim.yaml  print_schedule.yaml  run_attack_scenario.yaml
(+96 files in other folders)
